# Phoenix

./: .clang-format  .dockerignore  .editorconfig  .gitignore  .gitmodules  .prettierignore  .prettierrc  CMakeLists.txt  CMakePresets.json  README.md  dev.docker-compose.yml
ext/: CMakeLists.txt
src/login/: CMakeLists.txt  auth_session.cpp  auth_session.h  cert_helpers.h  connect_application.cpp  connect_application.h  connect_engine.cpp  connect_engine.h  data_session.cpp  data_session.h  handler.h  handler_session.cpp  login_errors.h  login_helpers.cpp  login_helpers.h  login_packets.h  otp_helpers.h  view_session.cpp  view_session.h
src/map/: CMakeLists.txt  ability.cpp  ability.h  alliance.cpp  aman.cpp  attack.cpp  attack.h  attackround.cpp  attackround.h  autotranslate.cpp  autotranslate.h  battlefield.cpp  battlefield.h  battlefield_handler.cpp  battlefield_handler.h  besieged_system.cpp  besieged_system.h  blue_spell.cpp  blue_spell.h  blue_trait.cpp  blue_trait.h  campaign_handler.cpp  campaign_system.cpp  campaign_system.h  char_recast_container.cpp  char_recast_container.h  command_handler.cpp  command_handler.h  conquest_data.cpp  conquest_data.h  conquest_system.cpp  conquest_system.h  daily_system.cpp  daily_system.h  enmity_container.cpp  enmity_container.h  event_info.h  fishingcontest.cpp  fishingcontest.h  gmcall_container.cpp  (+113 more)
src/map/action/: CMakeLists.txt  action.cpp  action.h  interrupts.cpp  interrupts.h
src/map/ai/: ai_container.cpp  ai_container.h
src/map/ai/controllers/: automaton_controller.cpp  automaton_controller.h  controller.cpp  controller.h  mob_controller.cpp  mob_controller.h  pet_controller.cpp  pet_controller.h  player_charm_controller.cpp  player_charm_controller.h  player_controller.cpp  player_controller.h  trust_controller.cpp  trust_controller.h
src/map/ai/helpers/: action_queue.cpp  event_handler.cpp  event_handler.h  gambits_container.cpp  (+5 more)
src/map/data/: CMakeLists.txt  load.h  loader.h  node.h
src/map/entities/: CMakeLists.txt  automaton_entity.cpp  automaton_entity.h  automatonentity.cpp  automatonentity.h  base_entity.cpp  base_entity.h  baseentity.cpp  baseentity.h  battle_entity.cpp  battle_entity.h  battleentity.cpp  battleentity.h  char_entity.cpp  char_entity.h  charentity.cpp  charentity.h  fellow_entity.cpp  fellow_entity.h  fellowentity.cpp  mob_entity.cpp  mob_entity.h  mobentity.cpp  mobentity.h  npc_entity.cpp  npc_entity.h  npcentity.cpp  npcentity.h  pet_entity.cpp  pet_entity.h  petentity.cpp  petentity.h  trust_entity.cpp  trust_entity.h  trustentity.cpp  trustentity.h
src/map/enums/: CMakeLists.txt  alter_ego_points.h  automaton.h  blocked_state.h  exdata.h  four_cc.h  furnishing_placement.h  item_flag.h  item_state.h  item_types.h  key_items.h  loot_recast.h  mission_log.h  msg_basic.h  msg_std.h  packet_c2s.h  packet_s2c.h  quest_log.h  recast.h  terrain_type.h
src/map/items/: CMakeLists.txt  craft_state.cpp  craft_state.h  exdata.cpp  exdata.h  item.cpp  item.h  item_access.h  item_currency.cpp  item_currency.h  item_equipment.cpp  item_equipment.h  item_fish.cpp  item_fish.h  item_flowerpot.cpp  item_flowerpot.h  item_furnishing.cpp  item_furnishing.h  item_general.cpp  item_general.h  item_linkshell.cpp  item_linkshell.h  item_puppet.cpp  item_puppet.h  item_shop.cpp  item_shop.h  item_usable.cpp  item_usable.h  item_weapon.cpp  item_weapon.h  transaction.cpp  transaction.h
src/map/los/: common.h  los_tree.cpp  los_tree.h  los_tree_node.cpp  los_tree_node.h  zone_los.cpp  zone_los.h
src/map/lua/: CMakeLists.txt  lua_ability.cpp  lua_ability.h  lua_action.cpp  lua_action.h  lua_base_entity.cpp  lua_base_entity.h  lua_baseentity.cpp  lua_baseentity.h  lua_battlefield.cpp  lua_battlefield.h  lua_cache.cpp  lua_cache.h  lua_instance.cpp  lua_instance.h  lua_item.cpp  lua_item.h  lua_item_puppet.cpp  lua_item_puppet.h  lua_loot.cpp  lua_loot.h  lua_mobskill.cpp  lua_mobskill.h  lua_petskill.cpp  lua_petskill.h  lua_spell.cpp  lua_spell.h  lua_statuseffect.cpp  lua_statuseffect.h  lua_trade_container.cpp  lua_trade_container.h  lua_weaponskill.cpp  lua_weaponskill.h  lua_zone.cpp  lua_zone.h  luautils.cpp  luautils.h  sol_bindings.cpp  sol_bindings.h
src/map/navmesh/: inavmesh.h  navmesh.cpp  navmesh.h  navmesh_builder.cpp  navmesh_builder.h  navmesh_config.h
src/map/packets/: CMakeLists.txt  basic.h  char_status.cpp  char_sync.cpp  char_update.cpp  entity_set_name.cpp  entity_update.cpp  pet_sync.cpp
src/map/utils/: CMakeLists.txt  attackutils.cpp  attackutils.h  auctionutils.cpp  auctionutils.h  battleutils.cpp  battleutils.h  blacklistutils.cpp  blacklistutils.h  blueutils.cpp  blueutils.h  charutils.cpp  charutils.h  dboxutils.cpp  dboxutils.h  fellowutils.cpp  fellowutils.h  fishingutils.cpp  fishingutils.h  gardenutils.cpp  gardenutils.h  guildutils.cpp  guildutils.h  instanceutils.cpp  instanceutils.h  itemutils.cpp  itemutils.h  jailutils.cpp  jailutils.h  messageutils.cpp  messageutils.h  mobutils.cpp  mobutils.h  moduleutils.cpp  moduleutils.h  mountutils.cpp  mountutils.h  petutils.cpp  petutils.h  puppetutils.cpp  (+11 more)
src/map/ximesh/: iximesh.h  transformation_matrix.h  vector3.h  ximesh.cpp  ximesh.h  ximesh_structs.h
src/search/: CMakeLists.txt  data_loader.cpp  data_loader.h  handler.h  search.h  search_application.cpp  search_application.h  search_engine.cpp  search_engine.h  search_handler.cpp  search_handler.h  search_listener.h
src/search/packets/: search_comment.cpp  search_comment.h
src/test/: CMakeLists.txt  main.cpp  mock_socket.h  test_application.cpp  test_application.h  test_case.cpp  test_case.h  test_char.cpp  test_collector.cpp  test_collector.h  test_engine.cpp  test_engine.h  test_lua_environment.cpp  test_suite.cpp  test_suite.h
src/test/enums/: tick_type.h
src/test/lua/: lua_client_entity_pair.cpp  lua_client_entity_pair.h  lua_simulation.cpp  lua_simulation.h  lua_spy.cpp  lua_spy.h  lua_stub.cpp  lua_stub.h  lua_test_entity.cpp  lua_test_entity.h  lua_test_entity_assertions.cpp  lua_test_entity_assertions.h
src/test/reporters/: console_reporter.cpp
(+10288 files in other folders)
