add_subdirectory(c2s)
add_subdirectory(s2c)

set(PACKET_SOURCES
    ${PACKET_C2S_SOURCES}
    ${PACKET_S2C_SOURCES}
    ${CMAKE_CURRENT_SOURCE_DIR}/action.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/action.h
    ${CMAKE_CURRENT_SOURCE_DIR}/basic.h
    ${CMAKE_CURRENT_SOURCE_DIR}/char_status.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/char_status.h
    ${CMAKE_CURRENT_SOURCE_DIR}/char_sync.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/char_sync.h
    ${CMAKE_CURRENT_SOURCE_DIR}/char_update.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/char_update.h
    ${CMAKE_CURRENT_SOURCE_DIR}/entity_set_name.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/entity_set_name.h
    ${CMAKE_CURRENT_SOURCE_DIR}/entity_update.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/entity_update.h
    ${CMAKE_CURRENT_SOURCE_DIR}/pet_sync.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/pet_sync.h
    PARENT_SCOPE
)
